[project]
name = "AIMPapers"
version = "0.0.1"
description = "Artificial Intelligence Monthly Papers"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "NextAI", email = "nextartifintell@gmail.com"}
]
maintainers = [
    {name = "NextAI", email = "nextartifintell@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/Easy-PhD/AIMPapers"
Repository = "https://github.com/Easy-PhD/AIMPapers"
Documentation = "https://Easy-PhD.github.io/AIMPapers"
Source = "https://github.com/Easy-PhD/AIMPapers"
Issues = "https://github.com/Easy-PhD/AIMPapers/issues"
Changelog = "https://github.com/Easy-PhD/AIMPapers/releases"
